Package reconfiguration for React Native component.

--- a/config/tsconfig.types.json
+++ b/config/tsconfig.types.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig",
+  "extends": "./tsconfig.common.json",
   "compilerOptions": {
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "emitDeclarationOnly": true,
