--- a/package.json
+++ b/package.json
@@ -1,86 +1,45 @@
 {
-  "name": "@xorde-labs/react-native-slider-verify",
+  "name": "rnSwipeButton",
   "version": "0.0.1",
-  "keywords": [
-    "react-native",
-    "component",
-    "slider-verify"
-  ],
-  "description": "Slider-type human verification for React Native",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "umd:main": "dist/umd/index.js",
-  "types": "dist/types/index.d.js",
+  "private": true,
   "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
-    "clean": "node tools/cleanup",
-    "package": "npm run build && npm pack",
-    "test": "jest --no-cache --runInBand",
-    "test:cov": "jest --coverage --no-cache",
-    "addscope": "node tools/packagejson name @xorde-labs/react-native-slider-verify",
-    "modules:reinstall": "rm -rf node_modules && rm -rf .jest && yarn cache clean && yarn install",
-    "rn:config": "react-native config"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "files": [
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xorde-labs/react-native-slider-verify.git"
-  },
-  "author": "devteam@xorde.co",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/xorde-labs/react-native-slider-verify/issues"
-  },
-  "homepage": "https://github.com/xorde-labs/react-native-slider-verify#readme",
-  "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/plugin-proposal-decorators": "^7.19.1",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/runtime": "^7.19.0",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.0.3",
-    "@types/react": "^18.0.20",
-    "@types/react-native": "^0.70.0",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.36.0",
-    "babel-jest": "^29.0.3",
-    "eslint": "~8.22.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "pinst": "^3.0.0",
-    "prettier": "^2.7.1",
-    "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "^0.70.1"
+    "react": "18.1.0",
+    "react-native": "0.70.1",
+    "react-native-vector-icons": "^9.2.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "@react-native-community",
-      "eslint-config-prettier"
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.70.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.72.1",
+    "react-test-renderer": "18.1.0",
+    "typescript": "^4.8.3"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   }
 }
