--- a/package.json
+++ b/package.json
@@ -1,86 +1,157 @@
 {
-  "name": "@xorde-labs/react-native-slider-verify",
-  "version": "0.0.1",
+  "name": "rn-slide-verify",
+  "version": "0.1.0",
+  "description": "test",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
+  "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index",
+  "source": "src/index",
+  "files": [
+    "src",
+    "lib",
+    "android",
+    "ios",
+    "cpp",
+    "rn-slide-verify.podspec",
+    "!lib/typescript/example",
+    "!android/build",
+    "!ios/build",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
+  "scripts": {
+    "test": "jest",
+    "typescript": "tsc --noEmit",
+    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "prepare": "bob build",
+    "release": "release-it",
+    "example": "yarn --cwd example",
+    "bootstrap": "yarn example && yarn && yarn example pods"
+  },
   "keywords": [
     "react-native",
-    "component",
-    "slider-verify"
+    "ios",
+    "android"
   ],
-  "description": "Slider-type human verification for React Native",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "umd:main": "dist/umd/index.js",
-  "types": "dist/types/index.d.js",
-  "scripts": {
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
-    "build:cjs": "node tools/cleanup cjs && tsc -p config/tsconfig.cjs.json",
-    "build:esm": "node tools/cleanup esm && tsc -p config/tsconfig.esm.json",
-    "build:types": "node tools/cleanup types && tsc -p config/tsconfig.types.json",
-    "clean": "node tools/cleanup",
-    "package": "npm run build && npm pack",
-    "test": "jest --no-cache --runInBand",
-    "test:cov": "jest --coverage --no-cache",
-    "addscope": "node tools/packagejson name @xorde-labs/react-native-slider-verify",
-    "modules:reinstall": "rm -rf node_modules && rm -rf .jest && yarn cache clean && yarn install",
-    "rn:config": "react-native config"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "files": [
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xorde-labs/react-native-slider-verify.git"
-  },
-  "author": "devteam@xorde.co",
-  "license": "GPL-3.0",
+  "repository": "https://github.com/techloset/SliderComponent-Library",
+  "author": "TechloSet Solutions",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/xorde-labs/react-native-slider-verify/issues"
+    "url": "https://github.com/techloset/SliderComponent-Library/issues"
   },
-  "homepage": "https://github.com/xorde-labs/react-native-slider-verify#readme",
+  "homepage": "https://github.com/techloset/SliderComponent-Library#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
-    "@babel/core": "^7.19.1",
-    "@babel/plugin-proposal-decorators": "^7.19.1",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/runtime": "^7.19.0",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@react-native-community/eslint-config": "^3.1.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.0.3",
-    "@types/react": "^18.0.20",
-    "@types/react-native": "^0.70.0",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.36.0",
-    "babel-jest": "^29.0.3",
-    "eslint": "~8.22.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
-    "metro-react-native-babel-preset": "^0.72.3",
-    "pinst": "^3.0.0",
-    "prettier": "^2.7.1",
-    "react-native-typescript-transformer": "^1.2.13",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "@arkweid/lefthook": "^0.7.7",
+    "@babel/eslint-parser": "^7.18.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@react-native-community/eslint-config": "^3.0.2",
+    "@release-it/conventional-changelog": "^5.0.0",
+    "@types/jest": "^28.1.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "0.68.0",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "commitlint": "^17.0.2",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
+    "pod-install": "^0.1.0",
+    "prettier": "^2.0.5",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-builder-bob": "^0.18.3",
+    "release-it": "^15.0.0",
+    "typescript": "^4.5.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.21"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "^0.70.1"
+    "prop-types": "^15.6.0",
+    "react-native-cached-image": "^1.4.3",
+    "react-native-vector-icons": "9.2.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": "angular"
+      }
+    }
   },
   "eslintConfig": {
+    "root": true,
+    "parser": "@babel/eslint-parser",
     "extends": [
       "@react-native-community",
-      "eslint-config-prettier"
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
+  "prettier": {
+    "quoteProps": "consistent",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ]
   }
 }
